--- a/website/index.html
+++ b/website/index.html
@@ -13,48 +13,44 @@
     }
 
     .marquee-container {
+      position: relative;
       width: 100%;
+      height: 60px;
       overflow: hidden;
       background: white;
-      height: 60px;
-      position: relative;
     }
 
     .marquee-track {
       display: flex;
-      animation: scroll 20s linear infinite;
       white-space: nowrap;
-    }
-
-    .marquee-content {
-      display: flex;
-      gap: 80px;
-      padding-right: 100px;
+      animation: scroll linear infinite;
     }
 
     .message {
-      display: flex;
+      display: inline-flex;
       align-items: center;
       font-size: 20px;
       color: black;
       text-transform: uppercase;
-      gap: 10px;
+      padding: 0 40px;
     }
 
     .dot {
+      display: inline-block;
+      margin-left: 10px;
+      margin-right: 10px;
       width: 5px;
       height: 5px;
       background-color: #aaa;
       border-radius: 50%;
     }
 
-    .fade-left,
-    .fade-right {
+    .fade-left, .fade-right {
       position: absolute;
       top: 0;
-      width: 60px;
+      width: 80px;
       height: 100%;
-      z-index: 2;
+      z-index: 1;
       pointer-events: none;
     }
 
@@ -69,8 +65,12 @@
     }
 
     @keyframes scroll {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-50%); }
+      0% {
+        transform: translateX(0);
+      }
+      100% {
+        transform: translateX(-50%);
+      }
     }
   </style>
 </head>
@@ -79,23 +79,158 @@
 <div class="marquee-container">
   <div class="fade-left"></div>
   <div class="fade-right"></div>
-
-  <div class="marquee-track">
-    <div class="marquee-content">
-      <div class="message">FOOTBALL JERSEYS OUT NOW. <div class="dot"></div></div>
-      <div class="message">FREE SHIPPING ON ORDERS $100+ <div class="dot"></div></div>
-      <div class="message">BASED IN NEW YORK. <div class="dot"></div></div>
-      <div class="message">NEXT DAY SHIPPING. <div class="dot"></div></div>
-    </div>
-    <!-- Duplicate for infinite loop -->
-    <div class="marquee-content">
-      <div class="message">FOOTBALL JERSEYS OUT NOW. <div class="dot"></div></div>
-      <div class="message">FREE SHIPPING ON ORDERS $100+ <div class="dot"></div></div>
-      <div class="message">BASED IN NEW YORK. <div class="dot"></div></div>
-      <div class="message">NEXT DAY SHIPPING. <div class="dot"></div></div>
-    </div>
-  </div>
+  <div id="marquee" class="marquee-track"></div>
 </div>
+
+<script>
+  const messages = [
+    "FOOTBALL JERSEYS OUT NOW",
+    "FREE SHIPPING ON ORDERS $100+",
+    "BASED IN NEW YORK",
+    "NEXT DAY SHIPPING"
+  ];
+
+  const marquee = document.getElementById("marquee");
+
+  function buildContent() {
+    const createSegment = () => {
+      return messages.map(msg => {
+        return `<span class="message">${msg}<span class="dot"></span></span>`;
+      }).join('');
+    };
+
+    // Create two identical segments for seamless looping
+    marquee.innerHTML = createSegment() + createSegment();
+
+    // Set animation duration based on width
+    requestAnimationFrame(() => {
+      const contentWidth = marquee.offsetWidth / 2;
+      const speed = 100; // pixels per second
+      const duration = contentWidth / speed;
+      marquee.style.animationDuration = `${duration}s`;
+    });
+  }
+
+  buildContent();
+</script>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Seamless Infinite Marquee</title>
+  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      background: white;
+      font-family: 'Graduate', sans-serif;
+    }
+
+    .marquee-container {
+      position: relative;
+      width: 100%;
+      height: 60px;
+      overflow: hidden;
+      background: white;
+    }
+
+    .marquee-track {
+      display: flex;
+      white-space: nowrap;
+      animation: scroll linear infinite;
+    }
+
+    .message {
+      display: inline-flex;
+      align-items: center;
+      font-size: 20px;
+      color: black;
+      text-transform: uppercase;
+      padding: 0 40px;
+    }
+
+    .dot {
+      display: inline-block;
+      margin-left: 10px;
+      margin-right: 10px;
+      width: 5px;
+      height: 5px;
+      background-color: #aaa;
+      border-radius: 50%;
+    }
+
+    .fade-left, .fade-right {
+      position: absolute;
+      top: 0;
+      width: 80px;
+      height: 100%;
+      z-index: 1;
+      pointer-events: none;
+    }
+
+    .fade-left {
+      left: 0;
+      background: linear-gradient(to right, white, transparent);
+    }
+
+    .fade-right {
+      right: 0;
+      background: linear-gradient(to left, white, transparent);
+    }
+
+    @keyframes scroll {
+      0% {
+        transform: translateX(0);
+      }
+      100% {
+        transform: translateX(-50%);
+      }
+    }
+  </style>
+</head>
+<body>
+
+<div class="marquee-container">
+  <div class="fade-left"></div>
+  <div class="fade-right"></div>
+  <div id="marquee" class="marquee-track"></div>
+</div>
+
+<script>
+  const messages = [
+    "FOOTBALL JERSEYS OUT NOW.",
+    "FREE SHIPPING ON ORDERS $100+",
+    "BASED IN NEW YORK.",
+    "NEXT DAY SHIPPING."
+  ];
+
+  const marquee = document.getElementById("marquee");
+
+  function buildContent() {
+    const createSegment = () => {
+      return messages.map(msg => {
+        return `<span class="message">${msg}<span class="dot"></span></span>`;
+      }).join('');
+    };
+
+    // Create two identical segments for seamless looping
+    marquee.innerHTML = createSegment() + createSegment();
+
+    // Set animation duration based on width
+    requestAnimationFrame(() => {
+      const contentWidth = marquee.offsetWidth / 2;
+      const speed = 100; // pixels per second
+      const duration = contentWidth / speed;
+      marquee.style.animationDuration = `${duration}s`;
+    });
+  }
+
+  buildContent();
+</script>
 
 </body>
 </html>
