--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Matt Scianna</title>
+  <title>Matt Scianna</title>
+  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -20,16 +21,12 @@
       height: 50px;
     }
 
-    .marquee {
+    .marquee-content {
       display: flex;
       white-space: nowrap;
-      animation: scroll 15s linear infinite;
-      font-size: 20px;
-      align-items: center;
-      height: 100%;
     }
 
-    .marquee span {
+    .marquee-content span {
       margin: 0 40px;
       display: flex;
       align-items: center;
@@ -44,20 +41,11 @@
       display: inline-block;
     }
 
-    @keyframes scroll {
-      0% {
-        transform: translateX(0);
-      }
-      100% {
-        transform: translateX(-50%);
-      }
-    }
-
     .fade-left,
     .fade-right {
       position: absolute;
       top: 0;
-      width: 40px; /* fade starts sooner */
+      width: 40px;
       height: 100%;
       z-index: 1;
       pointer-events: none;
@@ -72,35 +60,60 @@
       right: 0;
       background: linear-gradient(to left, white, transparent);
     }
-
-    .marquee-content {
-      display: inline-flex;
-    }
   </style>
 </head>
 <body>
+
   <div class="marquee-wrapper">
     <div class="fade-left"></div>
     <div class="fade-right"></div>
-    <div class="marquee">
-      <div class="marquee-content">
-        <span>FOOTBALL JERSEYS OUT NOW.</span>
-        <span class="dot"></span>
-        <span>FREE SHIPPING ON ORDERS $100+</span>
-        <span class="dot"></span>
-        <span>BASED IN NEW YORK.</span>
-        <span class="dot"></span>
-        <span>NEXT DAY SHIPPING.</span>
-        <!-- Duplicate for seamless scroll -->
-        <span>FOOTBALL JERSEYS OUT NOW.</span>
-        <span class="dot"></span>
-        <span>FREE SHIPPING ON ORDERS $100+</span>
-        <span class="dot"></span>
-        <span>BASED IN NEW YORK.</span>
-        <span class="dot"></span>
-        <span>NEXT DAY SHIPPING.</span>
-      </div>
+
+    <div class="marquee-content" id="marquee">
+      <span>FOOTBALL JERSEYS OUT NOW.</span>
+      <span class="dot"></span>
+      <span>FREE SHIPPING ON ORDERS $100+</span>
+      <span class="dot"></span>
+      <span>BASED IN NEW YORK.</span>
+      <span class="dot"></span>
+      <span>NEXT DAY SHIPPING</span>
+      <!-- Duplicate content for seamless scrolling -->
+      <span>FOOTBALL JERSEYS OUT NOW.</span>
+      <span class="dot"></span>
+      <span>FREE SHIPPING ON ORDERS $100+</span>
+      <span class="dot"></span>
+      <span>BASED IN NEW YORK.</span>
+      <span class="dot"></span>
+      <span>NEXT DAY SHIPPING.</span>
+      <span>FOOTBALL JERSEYS OUT NOW.</span>
+      <span class="dot"></span>
+      <span>FREE SHIPPING ON ORDERS $100+</span>
+      <span class="dot"></span>
+      <span>BASED IN NEW YORK.</span>
+      <span class="dot"></span>
+      <span>NEXT DAY SHIPPING.</span>
+      <span>FOOTBALL JERSEYS OUT NOW.</span>
+      <span class="dot"></span>
+      <span>FREE SHIPPING ON ORDERS $100+</span>
+      <span class="dot"></span>
+      <span>BASED IN NEW YORK.</span>
+      <span class="dot"></span>
+      <span>NEXT DAY SHIPPING.</span>
     </div>
   </div>
+
+  <!-- Include GSAP -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+  <script>
+    const marquee = document.getElementById('marquee');
+    const totalWidth = marquee.scrollWidth / 2;
+
+    gsap.to(marquee, {
+      x: -totalWidth,
+      duration: 15,
+      ease: 'linear',
+      repeat: -1
+    });
+  </script>
+
 </body>
 </html>
