--- a/website/index.html
+++ b/website/index.html
@@ -21,31 +21,37 @@
       height: 50px;
     }
 
+    .marquee {
+      display: flex;
+      width: max-content;
+      animation: scroll 15s linear infinite;
+    }
+
     .marquee-content {
       display: flex;
       white-space: nowrap;
+      align-items: center;
     }
 
     .marquee-content span {
-      margin: 0 40px;
+      margin: 0 30px;
       display: flex;
       align-items: center;
     }
 
     .dot {
-      margin: 0 20px;
       width: 6px;
       height: 6px;
-      background-color: #aaa;
+      background-color: #999;
       border-radius: 50%;
-      display: inline-block;
+      margin: 0 20px;
     }
 
     .fade-left,
     .fade-right {
       position: absolute;
       top: 0;
-      width: 40px;
+      width: 60px;
       height: 100%;
       z-index: 1;
       pointer-events: none;
@@ -60,6 +66,15 @@
       right: 0;
       background: linear-gradient(to left, white, transparent);
     }
+
+    @keyframes scroll {
+      from {
+        transform: translateX(0);
+      }
+      to {
+        transform: translateX(-50%);
+      }
+    }
   </style>
 </head>
 <body>
@@ -67,52 +82,26 @@
   <div class="marquee-wrapper">
     <div class="fade-left"></div>
     <div class="fade-right"></div>
-
-    <div class="marquee-content" id="marquee">
-      <span>FOOTBALL JERSEYS OUT NOW.</span>
-      <span class="dot"></span>
-      <span>FREE SHIPPING ON ORDERS $100+</span>
-      <span class="dot"></span>
-      <span>BASED IN NEW YORK.</span>
-      <span class="dot"></span>
-      <span>NEXT DAY SHIPPING</span>
-      <!-- Duplicate content for seamless scrolling -->
-      <span>FOOTBALL JERSEYS OUT NOW.</span>
-      <span class="dot"></span>
-      <span>FREE SHIPPING ON ORDERS $100+</span>
-      <span class="dot"></span>
-      <span>BASED IN NEW YORK.</span>
-      <span class="dot"></span>
-      <span>NEXT DAY SHIPPING.</span>
-      <span>FOOTBALL JERSEYS OUT NOW.</span>
-      <span class="dot"></span>
-      <span>FREE SHIPPING ON ORDERS $100+</span>
-      <span class="dot"></span>
-      <span>BASED IN NEW YORK.</span>
-      <span class="dot"></span>
-      <span>NEXT DAY SHIPPING.</span>
-      <span>FOOTBALL JERSEYS OUT NOW.</span>
-      <span class="dot"></span>
-      <span>FREE SHIPPING ON ORDERS $100+</span>
-      <span class="dot"></span>
-      <span>BASED IN NEW YORK.</span>
-      <span class="dot"></span>
-      <span>NEXT DAY SHIPPING.</span>
+    <div class="marquee" id="marquee">
+      <div class="marquee-content" id="content">
+        <span>FOOTBALL JERSEYS OUT NOW.</span>
+        <div class="dot"></div>
+        <span>FREE SHIPPING ON ORDERS $100+</span>
+        <div class="dot"></div>
+        <span>BASED IN NEW YORK.</span>
+        <div class="dot"></div>
+        <span>NEXT DAY SHIPPING.</span>
+        <div class="dot"></div>
+      </div>
     </div>
   </div>
 
-  <!-- Include GSAP -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script>
+    // Clone marquee content to enable infinite scroll
     const marquee = document.getElementById('marquee');
-    const totalWidth = marquee.scrollWidth / 2;
-
-    gsap.to(marquee, {
-      x: -totalWidth,
-      duration: 15,
-      ease: 'linear',
-      repeat: -1
-    });
+    const content = document.getElementById('content');
+    const clone = content.cloneNode(true);
+    marquee.appendChild(clone);
   </script>
 
 </body>
