--- a/website/index.html
+++ b/website/index.html
@@ -16,41 +16,42 @@
     .marquee-wrapper {
       position: relative;
       width: 100%;
-      height: 50px;
+      height: 60px;
       overflow: hidden;
       background: white;
     }
 
     .marquee-inner {
       display: flex;
-      width: max-content;
       white-space: nowrap;
-      animation: scroll 10s linear infinite;
+      will-change: transform;
+      animation: scroll 30s linear infinite;
+    }
+
+    .marquee-content {
+      display: flex;
+      align-items: center;
     }
 
     .marquee-item {
-      display: flex;
-      align-items: center;
-      margin-right: 40px;
-      font-size: 18px;
+      font-size: 20px;
       color: black;
+      margin: 0 15px;
     }
 
     .dot {
+      display: inline-block;
       width: 6px;
       height: 6px;
-      background-color: #999;
+      background-color: #aaa;
       border-radius: 50%;
-      margin: 0 20px;
+      margin: 0 15px;
+      align-self: center;
     }
 
     @keyframes scroll {
-      0% {
-        transform: translateX(0%);
-      }
-      100% {
-        transform: translateX(-50%);
-      }
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
     }
 
     .fade-left,
@@ -79,7 +80,14 @@
   <div class="marquee-wrapper">
     <div class="fade-left"></div>
     <div class="fade-right"></div>
-    <div class="marquee-inner" id="marquee"></div>
+    <div class="marquee-inner">
+      <div class="marquee-content" id="marquee">
+        <!-- Will be duplicated by JavaScript -->
+      </div>
+      <div class="marquee-content" id="marquee-copy">
+        <!-- Clone of marquee -->
+      </div>
+    </div>
   </div>
 
   <script>
@@ -91,27 +99,23 @@
     ];
 
     const marquee = document.getElementById("marquee");
+    const marqueeCopy = document.getElementById("marquee-copy");
 
-    // Function to generate items with dots
-    function createMarqueeContent(repeatCount = 10) {
-      for (let i = 0; i < repeatCount; i++) {
-        messages.forEach((text, index) => {
-          const item = document.createElement("div");
-          item.classList.add("marquee-item");
-          item.textContent = text;
-          marquee.appendChild(item);
+    function buildContent(container) {
+      messages.forEach((text, index) => {
+        const item = document.createElement("div");
+        item.className = "marquee-item";
+        item.textContent = text;
+        container.appendChild(item);
 
-          if (index < messages.length - 1 || i < repeatCount - 1) {
-            const dot = document.createElement("div");
-            dot.classList.add("dot");
-            marquee.appendChild(dot);
-          }
-        });
-      }
+        const dot = document.createElement("div");
+        dot.className = "dot";
+        container.appendChild(dot);
+      });
     }
 
-    // Create long enough marquee to loop seamlessly
-    createMarqueeContent(20);
+    buildContent(marquee);
+    buildContent(marqueeCopy); // Clone to make seamless loop
   </script>
 
 </body>
