--- a/website/index.html
+++ b/website/index.html
@@ -2,51 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matt Scianna</title>
-  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
-      background: white;
+      background-color: white;
       font-family: 'Graduate', sans-serif;
-      overflow-x: hidden;
     }
 
-    .marquee-wrapper {
+    .scroll-container {
       position: relative;
-      width: 100%;
-      height: 60px;
       overflow: hidden;
       background: white;
-    }
-
-    .marquee-inner {
-      display: flex;
-      white-space: nowrap;
-      will-change: transform;
-      animation: scroll 30s linear infinite;
-    }
-
-    .marquee-content {
+      height: 50px;
       display: flex;
       align-items: center;
     }
 
-    .marquee-item {
-      font-size: 20px;
+    .fade {
+      position: absolute;
+      width: 100px;
+      height: 100%;
+      z-index: 2;
+    }
+
+    .fade.left {
+      left: 0;
+      background: linear-gradient(to right, white, transparent);
+    }
+
+    .fade.right {
+      right: 0;
+      background: linear-gradient(to left, white, transparent);
+    }
+
+    .scroll-text-wrapper {
+      white-space: nowrap;
+      display: inline-block;
+      animation: scroll 15s linear infinite;
+    }
+
+    .scroll-text {
+      display: inline-block;
+      padding-right: 3rem;
       color: black;
-      margin: 0 15px;
+      font-size: 18px;
+      letter-spacing: 1px;
     }
 
     .dot {
       display: inline-block;
       width: 6px;
       height: 6px;
-      background-color: #aaa;
+      background-color: #888;
       border-radius: 50%;
-      margin: 0 15px;
-      align-self: center;
+      margin: 0 1.2rem;
+      vertical-align: middle;
     }
 
     @keyframes scroll {
@@ -54,69 +67,36 @@
       100% { transform: translateX(-50%); }
     }
 
-    .fade-left,
-    .fade-right {
-      position: absolute;
-      top: 0;
-      width: 80px;
-      height: 100%;
-      z-index: 2;
-      pointer-events: none;
-    }
-
-    .fade-left {
-      left: 0;
-      background: linear-gradient(to right, white, transparent);
-    }
-
-    .fade-right {
-      right: 0;
-      background: linear-gradient(to left, white, transparent);
+    @media (max-width: 600px) {
+      .scroll-text {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
 <body>
-
-  <div class="marquee-wrapper">
-    <div class="fade-left"></div>
-    <div class="fade-right"></div>
-    <div class="marquee-inner">
-      <div class="marquee-content" id="marquee">
-        <!-- Will be duplicated by JavaScript -->
-      </div>
-      <div class="marquee-content" id="marquee-copy">
-        <!-- Clone of marquee -->
-      </div>
+  <div class="scroll-container">
+    <div class="fade left"></div>
+    <div class="fade right"></div>
+    <div class="scroll-text-wrapper">
+      <span class="scroll-text">FOOTBALL JERSEYS OUT NOW.</span>
+      <span class="dot"></span>
+      <span class="scroll-text">FREE SHIPPING ON ORDERS $100+</span>
+      <span class="dot"></span>
+      <span class="scroll-text">BASED IN NEW YORK.</span>
+      <span class="dot"></span>
+      <span class="scroll-text">NEXT DAY SHIPPING.</span>
+      <span class="dot"></span>
+      <!-- Duplicate for seamless scroll -->
+      <span class="scroll-text">FOOTBALL JERSEYS OUT NOW.</span>
+      <span class="dot"></span>
+      <span class="scroll-text">FREE SHIPPING ON ORDERS $100+</span>
+      <span class="dot"></span>
+      <span class="scroll-text">BASED IN NEW YORK.</span>
+      <span class="dot"></span>
+      <span class="scroll-text">NEXT DAY SHIPPING.</span>
+      <span class="dot"></span>
     </div>
   </div>
-
-  <script>
-    const messages = [
-      "FOOTBALL JERSEYS OUT NOW.",
-      "FREE SHIPPING ON ORDERS $100+",
-      "BASED IN NEW YORK.",
-      "NEXT DAY SHIPPING."
-    ];
-
-    const marquee = document.getElementById("marquee");
-    const marqueeCopy = document.getElementById("marquee-copy");
-
-    function buildContent(container) {
-      messages.forEach((text, index) => {
-        const item = document.createElement("div");
-        item.className = "marquee-item";
-        item.textContent = text;
-        container.appendChild(item);
-
-        const dot = document.createElement("div");
-        dot.className = "dot";
-        container.appendChild(dot);
-      });
-    }
-
-    buildContent(marquee);
-    buildContent(marqueeCopy); // Clone to make seamless loop
-  </script>
-
 </body>
 </html>
