--- a/website/index.html
+++ b/website/index.html
@@ -26,6 +26,7 @@
       width: 100px;
       height: 100%;
       z-index: 2;
+      pointer-events: none;
     }
 
     .fade.left {
@@ -41,25 +42,22 @@
     .scroll-text-wrapper {
       white-space: nowrap;
       display: inline-block;
-      animation: scroll 15s linear infinite;
+      animation: scroll 20s linear infinite;
     }
 
-    .scroll-text {
+    .scroll-text, .dot {
       display: inline-block;
-      padding-right: 3rem;
       color: black;
       font-size: 18px;
-      letter-spacing: 1px;
+      vertical-align: middle;
     }
 
     .dot {
-      display: inline-block;
       width: 6px;
       height: 6px;
-      background-color: #888;
+      background-color: #999;
       border-radius: 50%;
-      margin: 0 1.2rem;
-      vertical-align: middle;
+      margin: 0 1.5rem;
     }
 
     @keyframes scroll {
@@ -79,23 +77,16 @@
     <div class="fade left"></div>
     <div class="fade right"></div>
     <div class="scroll-text-wrapper">
-      <span class="scroll-text">FOOTBALL JERSEYS OUT NOW.</span>
-      <span class="dot"></span>
-      <span class="scroll-text">FREE SHIPPING ON ORDERS $100+</span>
-      <span class="dot"></span>
-      <span class="scroll-text">BASED IN NEW YORK.</span>
-      <span class="dot"></span>
-      <span class="scroll-text">NEXT DAY SHIPPING.</span>
-      <span class="dot"></span>
-      <!-- Duplicate for seamless scroll -->
-      <span class="scroll-text">FOOTBALL JERSEYS OUT NOW.</span>
-      <span class="dot"></span>
-      <span class="scroll-text">FREE SHIPPING ON ORDERS $100+</span>
-      <span class="dot"></span>
-      <span class="scroll-text">BASED IN NEW YORK.</span>
-      <span class="dot"></span>
-      <span class="scroll-text">NEXT DAY SHIPPING.</span>
-      <span class="dot"></span>
+      <!-- Original Sequence -->
+      <span class="scroll-text">FOOTBALL JERSEYS OUT NOW.</span><span class="dot"></span>
+      <span class="scroll-text">FREE SHIPPING ON ORDERS $100+</span><span class="dot"></span>
+      <span class="scroll-text">BASED IN NEW YORK.</span><span class="dot"></span>
+      <span class="scroll-text">NEXT DAY SHIPPING.</span><span class="dot"></span>
+      <!-- Duplicate Sequence -->
+      <span class="scroll-text">FOOTBALL JERSEYS OUT NOW.</span><span class="dot"></span>
+      <span class="scroll-text">FREE SHIPPING ON ORDERS $100+</span><span class="dot"></span>
+      <span class="scroll-text">BASED IN NEW YORK.</span><span class="dot"></span>
+      <span class="scroll-text">NEXT DAY SHIPPING.</span><span class="dot"></span>
     </div>
   </div>
 </body>
