--- a/website/index.html
+++ b/website/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
-  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet"/>
   <style>
     body {
       margin: 0;
@@ -15,7 +15,7 @@
     .scroll-container {
       position: relative;
       overflow: hidden;
-      background: white;
+      background-color: white;
       height: 50px;
       display: flex;
       align-items: center;
@@ -39,17 +39,18 @@
       background: linear-gradient(to left, white, transparent);
     }
 
-    .scroll-text-wrapper {
+    .scroll-content {
+      display: flex;
       white-space: nowrap;
-      display: inline-block;
-      animation: scroll 20s linear infinite;
+      animation: scroll linear infinite;
     }
 
-    .scroll-text, .dot {
-      display: inline-block;
-      color: black;
+    .scroll-text {
+      display: flex;
+      align-items: center;
       font-size: 18px;
-      vertical-align: middle;
+      color: black;
+      margin-right: 2rem;
     }
 
     .dot {
@@ -57,12 +58,8 @@
       height: 6px;
       background-color: #999;
       border-radius: 50%;
-      margin: 0 1.5rem;
-    }
-
-    @keyframes scroll {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-50%); }
+      margin: 0 1.2rem;
+      display: inline-block;
     }
 
     @media (max-width: 600px) {
@@ -76,18 +73,53 @@
   <div class="scroll-container">
     <div class="fade left"></div>
     <div class="fade right"></div>
-    <div class="scroll-text-wrapper">
-      <!-- Original Sequence -->
-      <span class="scroll-text">FOOTBALL JERSEYS OUT NOW.</span><span class="dot"></span>
-      <span class="scroll-text">FREE SHIPPING ON ORDERS $100+</span><span class="dot"></span>
-      <span class="scroll-text">BASED IN NEW YORK.</span><span class="dot"></span>
-      <span class="scroll-text">NEXT DAY SHIPPING.</span><span class="dot"></span>
-      <!-- Duplicate Sequence -->
-      <span class="scroll-text">FOOTBALL JERSEYS OUT NOW.</span><span class="dot"></span>
-      <span class="scroll-text">FREE SHIPPING ON ORDERS $100+</span><span class="dot"></span>
-      <span class="scroll-text">BASED IN NEW YORK.</span><span class="dot"></span>
-      <span class="scroll-text">NEXT DAY SHIPPING.</span><span class="dot"></span>
-    </div>
+    <div id="scroll-wrapper" class="scroll-content"></div>
   </div>
+
+  <script>
+    const messages = [
+      "FOOTBALL JERSEYS OUT NOW.",
+      "FREE SHIPPING ON ORDERS $100+",
+      "BASED IN NEW YORK.",
+      "NEXT DAY SHIPPING."
+    ];
+
+    const wrapper = document.getElementById("scroll-wrapper");
+
+    // Create two identical sequences
+    function createSequence() {
+      const fragment = document.createDocumentFragment();
+      for (const text of messages) {
+        const span = document.createElement("span");
+        span.className = "scroll-text";
+        span.textContent = text;
+
+        const dot = document.createElement("span");
+        dot.className = "dot";
+
+        fragment.appendChild(span);
+        fragment.appendChild(dot);
+      }
+      return fragment;
+    }
+
+    wrapper.appendChild(createSequence());
+    wrapper.appendChild(createSequence());
+
+    // Once loaded, set animation duration based on content width
+    window.onload = () => {
+      const contentWidth = wrapper.scrollWidth / 2; // width of one full loop
+      wrapper.style.animationDuration = `${contentWidth / 50}s`; // adjust speed
+      wrapper.style.animationName = "scroll";
+      wrapper.style.animationTimingFunction = "linear";
+    };
+  </script>
+
+  <style>
+    @keyframes scroll {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
+    }
+  </style>
 </body>
 </html>
