--- a/website/index.html
+++ b/website/index.html
@@ -2,131 +2,119 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Infinite Scrolling Banner</title>
-  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Matt Scianna</title>
+  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
       background-color: white;
-      font-family: 'Graduate', sans-serif;
-      text-align: center;
+      font-family: 'Graduate', serif;
+      overflow-x: hidden;
     }
 
-    .scroll-container {
+    .ticker-wrapper {
       position: relative;
+      width: 100%;
+      background: white;
       overflow: hidden;
-      background-color: white;
       height: 50px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
 
-    .fade {
+    .ticker-fade {
       position: absolute;
+      top: 0;
       width: 100px;
       height: 100%;
       z-index: 2;
       pointer-events: none;
     }
 
-    .fade.left {
+    .fade-left {
       left: 0;
-      background: linear-gradient(to right, white, transparent);
+      background: linear-gradient(to right, white 0%, transparent 100%);
     }
 
-    .fade.right {
+    .fade-right {
       right: 0;
-      background: linear-gradient(to left, white, transparent);
+      background: linear-gradient(to left, white 0%, transparent 100%);
     }
 
-    .scroll-wrapper {
+    .ticker {
       display: flex;
-      white-space: nowrap;
-      animation: scroll 35s linear infinite;
-      align-items: center;
-    }
-
-    .scroll-text {
-      display: flex;
+      width: max-content;
+      animation: scroll 30s linear infinite;
       align-items: center;
       font-size: 18px;
-      color: black;
+      white-space: nowrap;
+    }
+
+    .ticker span {
+      margin: 0 30px;
+      position: relative;
     }
 
     .dot {
-      width: 6px;
-      height: 6px;
-      background-color: #aaa;
-      border-radius: 50%;
-      margin: 0 1.2rem;
-      align-self: center;
+      display: inline-block;
+      margin: 0 10px;
+      font-size: 18px;
+      color: #aaa;
+      vertical-align: middle;
     }
 
     @keyframes scroll {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-50%); }
-    }
-
-    @media (max-width: 600px) {
-      .scroll-text {
-        font-size: 14px;
+      0% {
+        transform: translateX(0);
+      }
+      100% {
+        transform: translateX(-50%);
       }
     }
 
-    /* Logo styles */
+    .ticker-track {
+      display: flex;
+      animation: scroll 30s linear infinite;
+      white-space: nowrap;
+    }
+
     .logo-container {
-      margin-top: 40px;
+      text-align: center;
+      margin-top: 20px;
     }
 
     .logo-container img {
-      width: 200px;
-      max-width: 80%;
-      height: auto;
+      height: 80px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="scroll-container">
-    <div class="fade left"></div>
-    <div class="fade right"></div>
-    <div id="scroll-wrapper" class="scroll-wrapper"></div>
+
+  <div class="ticker-wrapper">
+    <div class="fade-left ticker-fade"></div>
+    <div class="fade-right ticker-fade"></div>
+    <div class="ticker-track">
+      <div class="ticker">
+        <span>FOOTBALL JERSEYS OUT NOW.</span><span class="dot">•</span>
+        <span>FREE SHIPPING ON ORDERS $100+</span><span class="dot">•</span>
+        <span>BASED IN NEW YORK.</span><span class="dot">•</span>
+        <span>NEXT DAY SHIPPING.</span><span class="dot">•</span>
+      </div>
+      <div class="ticker">
+        <span>FOOTBALL JERSEYS OUT NOW.</span><span class="dot">•</span>
+        <span>FREE SHIPPING ON ORDERS $100+</span><span class="dot">•</span>
+        <span>BASED IN NEW YORK.</span><span class="dot">•</span>
+        <span>NEXT DAY SHIPPING.</span><span class="dot">•</span>
+      </div>
+    </div>
   </div>
 
-  <!-- LOGO IMAGE BELOW -->
+  <!-- Logo Image Box -->
   <div class="logo-container">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Logo" />
+    <a href="/">
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Logo" />
+    </a>
   </div>
 
-  <script>
-    const messages = [
-      "FOOTBALL JERSEYS OUT NOW.",
-      "FREE SHIPPING ON ORDERS $100+",
-      "BASED IN NEW YORK.",
-      "NEXT DAY SHIPPING."
-    ];
-
-    const wrapper = document.getElementById("scroll-wrapper");
-
-    function createSequence() {
-      const fragment = document.createDocumentFragment();
-      for (let i = 0; i < messages.length; i++) {
-        const textSpan = document.createElement("span");
-        textSpan.className = "scroll-text";
-        textSpan.textContent = messages[i];
-        fragment.appendChild(textSpan);
-
-        const dot = document.createElement("span");
-        dot.className = "dot";
-        fragment.appendChild(dot);
-      }
-      return fragment;
-    }
-
-    for (let i = 0; i < 10; i++) {
-      wrapper.appendChild(createSequence());
-    }
-  </script>
 </body>
 </html>
