--- a/website/index.html
+++ b/website/index.html
@@ -4,30 +4,42 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matt Scianna</title>
-  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
+      padding: 0;
       background-color: white;
-      font-family: 'Graduate', serif;
-      overflow-x: hidden;
+      font-family: 'Graduate', sans-serif;
+      text-align: center;
     }
 
-    .ticker-wrapper {
+    .scroll-container {
       position: relative;
-      width: 100%;
-      background: white;
       overflow: hidden;
+      white-space: nowrap;
       height: 50px;
+      background-color: white;
     }
 
-    .ticker-fade {
+    .scroll-content {
+      display: inline-block;
+      padding-left: 100%;
+      animation: scroll 20s linear infinite;
+    }
+
+    @keyframes scroll {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
+    }
+
+    .fade {
       position: absolute;
       top: 0;
-      width: 100px;
+      width: 80px;
       height: 100%;
+      background: white;
       z-index: 2;
-      pointer-events: none;
     }
 
     .fade-left {
@@ -40,79 +52,60 @@
       background: linear-gradient(to left, white 0%, transparent 100%);
     }
 
-    .ticker {
-      display: flex;
-      width: max-content;
-      animation: scroll 30s linear infinite;
-      align-items: center;
-      font-size: 18px;
-      white-space: nowrap;
-    }
-
-    .ticker span {
-      margin: 0 30px;
-      position: relative;
+    .scroll-text {
+      display: inline-block;
+      font-size: 20px;
+      color: black;
     }
 
     .dot {
       display: inline-block;
-      margin: 0 10px;
-      font-size: 18px;
+      margin: 0 20px;
+      font-size: 16px;
       color: #aaa;
-      vertical-align: middle;
-    }
-
-    @keyframes scroll {
-      0% {
-        transform: translateX(0);
-      }
-      100% {
-        transform: translateX(-50%);
-      }
-    }
-
-    .ticker-track {
-      display: flex;
-      animation: scroll 30s linear infinite;
-      white-space: nowrap;
+      position: relative;
+      top: -2px;
     }
 
     .logo-container {
-      text-align: center;
-      margin-top: 20px;
+      margin-top: 30px;
     }
 
     .logo-container img {
-      height: 80px;
+      width: 180px;
       cursor: pointer;
     }
   </style>
 </head>
 <body>
 
-  <div class="ticker-wrapper">
-    <div class="fade-left ticker-fade"></div>
-    <div class="fade-right ticker-fade"></div>
-    <div class="ticker-track">
-      <div class="ticker">
-        <span>FOOTBALL JERSEYS OUT NOW.</span><span class="dot">•</span>
-        <span>FREE SHIPPING ON ORDERS $100+</span><span class="dot">•</span>
-        <span>BASED IN NEW YORK.</span><span class="dot">•</span>
-        <span>NEXT DAY SHIPPING.</span><span class="dot">•</span>
-      </div>
-      <div class="ticker">
-        <span>FOOTBALL JERSEYS OUT NOW.</span><span class="dot">•</span>
-        <span>FREE SHIPPING ON ORDERS $100+</span><span class="dot">•</span>
-        <span>BASED IN NEW YORK.</span><span class="dot">•</span>
-        <span>NEXT DAY SHIPPING.</span><span class="dot">•</span>
-      </div>
+  <div class="scroll-container">
+    <div class="fade fade-left"></div>
+    <div class="fade fade-right"></div>
+    <div class="scroll-content">
+      <span class="scroll-text">FOOTBALL JERSEYS OUT NOW.</span>
+      <span class="dot">•</span>
+      <span class="scroll-text">FREE SHIPPING ON ORDERS $100+</span>
+      <span class="dot">•</span>
+      <span class="scroll-text">BASED IN NEW YORK.</span>
+      <span class="dot">•</span>
+      <span class="scroll-text">NEXT DAY SHIPPING.</span>
+      <span class="dot">•</span>
+      <!-- Repeat for seamless scrolling -->
+      <span class="scroll-text">FOOTBALL JERSEYS OUT NOW.</span>
+      <span class="dot">•</span>
+      <span class="scroll-text">FREE SHIPPING ON ORDERS $100+</span>
+      <span class="dot">•</span>
+      <span class="scroll-text">BASED IN NEW YORK</span>
+      <span class="dot">•</span>
+      <span class="scroll-text">NEXT DAY SHIPPING.</span>
+      <span class="dot">•</span>
     </div>
   </div>
 
-  <!-- Logo Image Box -->
   <div class="logo-container">
-    <a href="/">
-      <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Logo" />
+    <a href="">
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Matt Scianna Logo" />
     </a>
   </div>
 
