--- a/website/index.html
+++ b/website/index.html
@@ -42,15 +42,16 @@
       font-size: 20px;
       color: black;
       margin: 0 10px;
+      line-height: 50px;
     }
 
     .dot {
       display: inline-block;
       margin: 0 20px;
-      font-size: 16px;
+      font-size: 18px;
       color: #aaa;
-      position: relative;
-      top: -2px;
+      vertical-align: middle;
+      line-height: 50px;
     }
 
     .fade {
@@ -73,7 +74,7 @@
     }
 
     .logo-container {
-      margin-top: 15px;
+      margin-top: 10px;
     }
 
     .logo-container img {
@@ -98,7 +99,6 @@
         <span class="scroll-text">NEXT DAY SHIPPING.</span>
         <span class="dot">•</span>
       </div>
-      <!-- Duplicate once for seamless infinite scroll -->
       <div class="scroll-track">
         <span class="scroll-text">FOOTBALL JERSEYS OUT NOW.</span>
         <span class="dot">•</span>
